[package]
name = "grid_util"
version = "0.1.0"
authors = ["Thom van der Woude <tbvanderwoude@protonmail.com>"]
edition = "2021"
description = "Utilities and primitive constructs like Grid, Point, Rect, etc."
keywords = ["grid","utility","rectangle","point"]
categories = ["game-development","simulation"]
license = "MIT"
repository = "https://github.com/tbvanderwoude/grid_util"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "^0.8"
ron = "0.6.2"
num_enum = "^0.5"
strum = "^0.20"
strum_macros = "^0.20"
rand_derive2 = "^0.1"
serde = { version = "^1", features = ["serde_derive"] }