[package]
name = "grid_util"
version = "0.2.0"
authors = ["Thom van der Woude <tbvanderwoude@protonmail.com>"]
edition = "2021"
description = "Utilities and primitive constructs like Grid, Point, Rect, etc."
keywords = ["grid","utility","rectangle","point"]
categories = ["game-development","simulation"]
license = "MIT"
repository = "https://github.com/tbvanderwoude/grid_util"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
smallvec = ["dep:smallvec"]

[dependencies]
rand = "^0.8"
ron = "^0.11"
num_enum = "^0.7"
strum = "^0.27"
strum_macros = "^0.27"
rand_derive2 = "^0.1"
serde = { version = "^1", features = ["serde_derive"] }
smallvec = { version = "^1.13", optional = true}
